--- a/Time_Series_Analysis/Chapter 9 Exploratory Data Analysis and Diagnosis.ipynb
+++ b/Time_Series_Analysis/Chapter 9 Exploratory Data Analysis and Diagnosis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16858a80",
+   "id": "51a6c017",
    "metadata": {},
    "source": [
     "Based on: https://github.com/PacktPublishing/Time-Series-Analysis-with-Python-Cookbook/blob/main/code/Ch9/Chapter%209.ipynb"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "80672204",
+   "execution_count": 1,
+   "id": "f3fc1b45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cca528e",
+   "id": "261bdb82",
    "metadata": {},
    "source": [
     "# Data Loading"
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0e4dd0bf",
+   "execution_count": 2,
+   "id": "d7900b0a",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "1958-04-26  316.4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "c1091eec",
+   "execution_count": 3,
+   "id": "c72b81c4",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6016950c",
+   "id": "577902ed",
    "metadata": {},
    "source": [
     "# 9.4 Detecting Time Series Stationarity \n",
@@ -190,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "97f0035c",
+   "execution_count": 4,
+   "id": "1cfbf341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2c69935",
+   "id": "903ca627",
    "metadata": {},
    "source": [
     "### Pring test results "
@@ -209,19 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "0039289f",
+   "execution_count": 18,
+   "id": "9985d206",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3684567752.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_1574/3684567752.py\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    if test='adf':\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_results(output,test='adf'):\n",
     "    \n",
@@ -232,7 +223,7 @@
     "    decision='Non-Stationary'\n",
     "    \n",
     "    if test=='adf':\n",
-    "        crtical=output[4]\n",
+    "        critical=output[4]\n",
     "        if pval<0.05:\n",
     "            decision='Stationary'\n",
     "    elif test=='kpss':\n",
@@ -247,21 +238,262 @@
     "        'decision':decision\n",
     "    }\n",
     "    \n",
-    "    for key,value in critial.items():\n",
+    "    for key,value in critical.items():\n",
     "        output_dict['Critical Value (%s)' % key]=value\n",
     "    \n",
-    "    return pd.Series(output,name_test)\n",
+    "    return pd.Series(output_dict,name=test)\n",
     "    \n",
     "    "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "567233f9",
+   "metadata": {},
+   "source": [
+    "## 9.4.1 Implementation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63d0841e",
+   "execution_count": 19,
+   "id": "3d7ab026",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.9/site-packages/statsmodels/tsa/stattools.py:1906: InterpolationWarning: The test statistic is outside of the range of p-values available in the\n",
+      "look-up table. The actual p-value is smaller than the p-value returned.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "adf_output=adfuller(co2_df)\n",
+    "kpss_output=kpss(co2_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "921a5c7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adf</th>\n",
+       "      <th>kpss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Test Statistic</th>\n",
+       "      <td>0.046051</td>\n",
+       "      <td>8.183188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p-value</th>\n",
+       "      <td>0.962179</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Number of lags</th>\n",
+       "      <td>27</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>decision</th>\n",
+       "      <td>Non-Stationary</td>\n",
+       "      <td>Non-Stationary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Critical Value (1%)</th>\n",
+       "      <td>-3.433252</td>\n",
+       "      <td>0.739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Critical Value (5%)</th>\n",
+       "      <td>-2.862822</td>\n",
+       "      <td>0.463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Critical Value (10%)</th>\n",
+       "      <td>-2.567452</td>\n",
+       "      <td>0.347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Critical Value (2.5%)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  adf            kpss\n",
+       "Test Statistic               0.046051        8.183188\n",
+       "p-value                      0.962179            0.01\n",
+       "Number of lags                     27              27\n",
+       "decision               Non-Stationary  Non-Stationary\n",
+       "Critical Value (1%)         -3.433252           0.739\n",
+       "Critical Value (5%)         -2.862822           0.463\n",
+       "Critical Value (10%)        -2.567452           0.347\n",
+       "Critical Value (2.5%)             NaN           0.574"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([\n",
+    "    print_results(adf_output,'adf'),\n",
+    "    print_results(kpss_output,'kpss')\n",
+    "],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ed49ccc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('1%', -3.4332519309441296), ('5%', -2.8628219967376647), ('10%', -2.567452466810334)])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adf_output[4].items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5e2cc6c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for key,value in adf_output[4].items():\n",
+    "    output_dict_test['critical value (%s)' % key]=value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "30231bc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'critical value (1%)': -3.4332519309441296,\n",
+       " 'critical value (5%)': -2.8628219967376647,\n",
+       " 'critical value (10%)': -2.567452466810334}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_dict_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33964c75",
+   "metadata": {},
+   "source": [
+    "## 9.4.2 Detrending "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a73a1713",
+   "metadata": {},
+   "source": [
+    "### Create functions  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d1e9c42a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_stationarity(df):\n",
+    "    kps=kpss(df)\n",
+    "    adf=adfuller(df)\n",
+    "    \n",
+    "    kpss_pv,adf_pv=kps[1],adf[1]\n",
+    "    kpssh,adfh='Stationary','Non-stationary'\n",
+    "    \n",
+    "    if adf_pv < 0.05:\n",
+    "        # Reject ADP Null Hypothesis\n",
+    "        adfh='Stationary'\n",
+    "    if kpss_pv < 0.05:\n",
+    "        # Reject KPSS Null Hupothesis\n",
+    "        kpssh='Non Stationary'\n",
+    "    return(kpssh,adfh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "342fb789",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_comparison(methods,plot_type='line'):\n",
+    "    n=len(methods)//2\n",
+    "    fig,ax=plt.subplots(n,2,sharex=True,figsize=(20,10))\n",
+    "    for i,method in enumerate(methods):\n",
+    "        method.dropna(inplace=True)\n",
+    "        name=[n for n in globals() if globals[n] is method]\n",
+    "        v,r=i//2,i%2\n",
+    "        \n",
+    "        kpss_s,adf_s=check_stationarity(method)\n",
+    "        \n",
+    "        method.plot(kind=plot_type,\n",
+    "                    ax=ax[v,r],\n",
+    "                    legend=False,\n",
+    "                    title=f'{name[0].upper()} KPSS={kpss_s}, ADF={adf_s}'\n",
+    "                   )\n",
+    "        ax[v,r].title.set_size(14)\n",
+    "        method.rolling(52).mean().plot(ax=ax[v,r],legend=False)"
+   ]
   }
  ],
  "metadata": {
